# JaiSriRam

./: CMakeLists.txt  Makefile  README.md  auto.sh  gitexample.txt  newlog.txt
bank_lib/: CMakeLists.txt  bank.cpp
bank_lib/include/: bank.h
calc_lib/: CMakeLists.txt  CMakeLists_backup.txt
calc_lib/include/calc_lib/: add.h  multiply.h
calc_lib/src/: add.cpp  multiply.cpp
main/: main.cpp
print_lib/: CMakeLists.txt
print_lib/include/print_lib/: print_result.h
print_lib/src/: print_result.cpp
